--- a/weapp/static_v2/css/mall_product.css
+++ b/weapp/static_v2/css/mall_product.css
@@ -804,7 +804,7 @@
 	right: 20px;
 }
 
-.xui-addProductCategoryDialog .modal-body,.modal-header{
+.xui-addProductCategoryDialog .modal-body .modal-header{
 	padding-left: 30px !important;
 }
 .xui-addProductCategoryDialog .modal-body{
