--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_all_user_list.html
@@ -14,7 +14,7 @@
 			        <div class="clearfix pt10 pb10">
 			            <div class="fl">
 				            <div class="xui-user">
-				                <img src="{% if member.user_icon %}{{ member.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" data-allow-autoplay="true">
+				                <img src="{% if review.user_icon %}{{ review.user_icon }}{% else %}/static/img/user-1.jpg{% endif %}" data-allow-autoplay="true">
 				            </div>
 			                <span class="ml5 xa-memberName">
 			                	{% autoescape off %}
