修复buy_member_price_product.feature

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -462,7 +462,7 @@ $(document).ready(function() {
 
             }else{
                 // 移除多余促销信息
-                if(product_promotion.type & product_promotion.type === 1){
+                if(product_promotion && product_promotion.type === 1){
                     $('.xa-promotionSection').remove();
                 }
             }
