实现manual_operation_member_grade.feature BDD

--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -337,7 +337,8 @@
 
                 }
 
-                grades.push({ 'id': id,  'name': name, 'is_auto_upgrade':is_auto_upgrade, 'pay_money':money, 'pay_times':paytimes, 'upgrade_lower_bound':bound, 'shop_discount':discount});
+                grades.push({ 'id': id,  'name': name, 'is_auto_upgrade':is_auto_upgrade, 'pay_money':money,
+                    'pay_times':paytimes, 'upgrade_lower_bound':bound, 'shop_discount':discount});
             });
 
             if(conditions_flag && discount_flag && discount_number_flag){
