--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_img.html
@@ -33,7 +33,7 @@
         </div>
         <h2>活动说明</h2>
         <div class="xui-info">
-        	<p>{{setting.qrcode_desc}}</p>
+        	{{setting.qrcode_desc}}
         </div>
 	</section>
 </div>
