--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -624,3 +624,68 @@
     border: 1px solid black;
     vertical-align: center;
 }
+.xui-memberPageSelectCouponDialog	.modal-dialog .modal-header{
+	margin-bottom: 0px;
+
+}
+.xui-memberPageSelectCouponDialog .modal-dialog .modal-body {
+	padding: 0px 20px;
+	width: 720px;
+}
+.xui-memberPageSelectCouponDialog .table>tbody>tr>td {
+	padding: 0px;
+	height: 52px;
+    padding-top: 8px;
+}
+.xui-memberPageSelectCouponDialog .xui-hint{
+	width:auto;
+	height: 36px;
+	line-height: 100%;
+	background:#fffadf;
+	color:#333333;
+	border-radius:5px;
+	border:1px solid #ffd4a2;
+	padding-top: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	position: relative;
+	top:-54px;
+	left:425px;
+	}
+.xui-memberPageSelectCouponDialog .xui-btn {
+	background-color:#f0f0f0;
+	height: 28px;
+	width: 28px;
+	padding: 5px;
+}
+.xui-memberPageSelectCouponDialog .xui-btngroup {
+	border:1px solid #d6d6d6;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.xui-memberPageSelectCouponDialog .xui-down {
+	border-right:1px solid #d6d6d6;
+	border-bottom:1px solid #d6d6d6;
+	padding: 5px 10px;
+
+}
+.xui-memberPageSelectCouponDialog .xui-counterText {
+	padding: 0px 5px;
+}
+
+.xui-memberPageSelectCouponDialog .xui-up {
+	border-left:1px solid #d6d6d6;
+	border-bottom:1px solid #d6d6d6;
+	padding: 5px 8px;
+
+}
+
+.xui-memberPageSelectCouponDialog .btn-primary.checked{
+    background: #CBCBCB;
+    border:1px solid #CBCBCB;
+    color: #999999;
+}
+
+.xui-memberPageSelectCouponDialog .errorHint {
+    margin-top:3px;
+}
