--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_participance.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_participance.html
@@ -49,7 +49,8 @@
 						data-enable-select-time="true"
 						data-validate="require-notempty"
 						data-ui-role="date-picker"
-					    data-format="yy-mm-dd HH:MM" 
+					    data-format="yy-mm-dd HH:MM"
+                        data-max-el="#end_time"
 					/>
 					至
 					<input
