--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -453,15 +453,14 @@ $(document).ready(function() {
                     msg = '会员价';
                 }
             }
-
             // 处理会员价
             if (msg){
-                var temp = '<span class="xui-memberPriceTag">'+msg+'</span><span class="xui-vipPrice-num em85">￥<span class="xa-price xa-singlePrice fb em95">'+ price +'</span></span><span class="xui-orPrice">原价￥<span class="xa-orPrice">'+ view.priceInfo.min_price +'</span></span>';
+                var temp = '<span class="xui-memberPriceTag">'+msg+'</span><span class="xui-vipPrice-num em85">￥<span class="xa-price xa-singlePrice fb em95" data-display-price="'+price+'">'+ price +'</span></span><span class="xui-orPrice">原价￥<span class="xa-orPrice" data-orPrice="'+view.priceInfo.min_price+'">'+ view.priceInfo.min_price +'</span></span>';
                 $('.xa-priceSection').html(temp);
 
             }else{
                 // 移除多余促销信息
-                if(product_promotion && product_promotion.type === 1){
+                if(is_product_promotion && !is_user_has_promotion){
                     $('.xa-promotionSection').remove();
                 }
             }
