功能：聊天记录新窗口打开 修改页面：realtime_messages.html

--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -293,9 +293,8 @@ $(document).ready(function() {
 		var replied = $current.attr('data-replied');
 		var sessionId = $current.parents('tr').attr('data-id')
 		var queryString = $('#query_string').attr('data-query-string');
-		localStorage['__realtimeMessageQueryString'] = queryString;
-		window.location.href = '/new_weixin/realtime_messages_detail/?session_id=' + sessionId + '&replied=' + replied
-
+		localStorage['__realtimeMessageQueryString'] = queryString;		
+		window.open('/new_weixin/realtime_messages_detail/?session_id=' + sessionId + '&replied=' + replied)
 	});
 	
 	$('body').delegate('.wx_collect_message', 'click', function(event){
