没有可用优惠券样式

--- a/weapp/static/css/base.css
+++ b/weapp/static/css/base.css
@@ -97,6 +97,7 @@ textarea{resize:none}
 .h40{height:40px;}
 .h80{height:80px;}
 .h100{height:100px;}
+.h120{height:120px;}
 .h150{height:150px;}
 .h200{height:200px;}
 .h{height:100%}
