--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -441,6 +441,19 @@ $(document).ready(function() {
                     price = (product_promotion.detail.promotion_price).toFixed(2);
                     msg = '促销价';
                 }
+                if(!is_user_has_promotion){
+                    // 促销bu对此用户开发
+                    var next_promotions = $('.xa-display-promotion').next('div');
+                    if(next_promotions.length==0){
+                        // mei ji fen ying yong
+                        $('.xa-promotionSection').remove()
+                    }else if(next_promotions.length == 1){
+                        // you ji fen ying yong
+                        $('.xa-display-promotion').html(next_promotions.html()).find('div:first').html('优惠：');
+                        next_promotions.remove()
+                    }
+
+                }
             // 商品无促销
             }
             if(!is_user_has_promotion){
@@ -459,12 +472,12 @@ $(document).ready(function() {
                 $('.xa-priceSection').html(temp);
 
             }
-            if(msg === '' || msg === "会员价"){
-                // 移除多余促销信息
-                if(is_product_promotion && !is_user_has_promotion){
-                    $('.xa-promotionSection').remove();
-                }
-            }
+            //(msg === '' || msg === "会员价"){
+            //  // 移除多余促销信息
+            //  if(is_product_promotion && !is_user_has_promotion){
+            //      //$('.xa-promotionSection').remove();
+            //  }
+            //
         },
         error: function(data) {
 
